Bug 161458 - [patch] editing of map-entries in kwalletmanager doesn't work
Summary: [patch] editing of map-entries in kwalletmanager doesn't work
Status: RESOLVED FIXED
Alias: None
Product: kwalletmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR grave
Target Milestone: ---
Assignee: Michael Leupold
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-04-30 12:40 UTC by Michael Leupold
Modified: 2008-05-08 01:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
patch (2.73 KB, patch)
2008-05-01 00:15 UTC, Michael Leupold
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Leupold 2008-04-30 12:40:10 UTC
Version:           1.1 (using 4.00.71 (KDE 4.0.71 (Alpha1), compiled sources)
Compiler:          gcc
OS:                Linux (x86_64) release 2.6.23.9hrt1cfsquechua-0.4intel

Editing of map-entries' passwords in kwalletmanager does not work. Apparently that broke on migrating to the Q3Compat classes. There are several notions:
1) The textedit for editing passwords is not focussed correctly. Opening the context-menu hides it, clicking outside of it doesn't properly hide it in most cases.
2) The contents used to be written back to the table when the textedit was deleted. Q3Table doesn't seem to destroy child-widgets properly in this case so the contents never get written back.

1) is already patched
2) will need some more work.
Comment 1 Michael Leupold 2008-05-01 00:15:17 UTC
Created attachment 24582 [details]
patch

This should fix 1) and 2). Editing maps is possible again.
Comment 2 Michael Leupold 2008-05-01 00:16:07 UTC
On fixing the bug I also changed the password entry widget from QTextEdit to KTextEdit.
Comment 3 Michael Leupold 2008-05-08 01:53:41 UTC
SVN commit 805257 by mleupold:

fixed: editing maps is now possible again.
Set the focus on the textfield editing the password and hide it on loosing focus (except for opening its own popup). Also changed the QTextEdit to KTextEdit.

BUG: 161458


 M  +21 -20    kwmapeditor.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=805257