fixed: editing maps is now possible again. Set the focus on the textfield editing the password and hide it on loosing focus (except for opening its own popup). Also changed the QTextEdit to KTextEdit.

BUG: 161458

svn path=/trunk/KDE/kdeutils/kwallet/; revision=805257